WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237013
[JSC] TypeError from JSRemoteFunction should be generated by JSRemoteFunction's JSGlobalObject
https://bugs.webkit.org/show_bug.cgi?id=237013
Summary
[JSC] TypeError from JSRemoteFunction should be generated by JSRemoteFunction...
Yusuke Suzuki
Reported
2022-02-21 18:27:44 PST
[JSC] TypeError from JSRemoteFunction should be generated by JSRemoteFunction's JSGlobalObject
Attachments
Patch
(6.25 KB, patch)
2022-02-21 18:28 PST
,
Yusuke Suzuki
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2022-02-21 18:28:47 PST
Created
attachment 452808
[details]
Patch
Yusuke Suzuki
Comment 2
2022-02-22 02:09:16 PST
Committed
r290296
(
247619@trunk
): <
https://commits.webkit.org/247619@trunk
>
Radar WebKit Bug Importer
Comment 3
2022-02-22 02:10:16 PST
<
rdar://problem/89283208
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug