[JSC] TypeError from JSRemoteFunction should be generated by JSRemoteFunction's JSGlobalObject https://bugs.webkit.org/show_bug.cgi?id=237013

Reviewed by Saam Barati.

JSTests:

* test262/expectations.yaml:

Source/JavaScriptCore:

Our unwinding converts any errors inside JSRemoteFunction to TypeError. At that time, we should
use JSRemoteFunction's JSGlobalObject for this type error.

* interpreter/Interpreter.cpp:
(JSC::UnwindFunctor::UnwindFunctor):
(JSC::UnwindFunctor::operator() const):
(JSC::sanitizeRemoteFunctionException):
(JSC::Interpreter::unwind):


Canonical link: https://commits.webkit.org/247619@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290296 268f45cc-cd09-0410-ab3c-d52691b4dbfc